<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="25dp"
    android:paddingRight="25dp"
    android:paddingTop="@dimen/activity_vertical_margin"
    app:layout_behavior="@string/appbar_scrolling_view_behavior"
    tools:context=".Activities.MainActivity"
    tools:showIn="@layout/app_bar_main">




    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <!--nombre de usuario-->
        <TextView
            android:id="@+id/txt_username"
            android:layout_marginBottom="50dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingTop="20dp"
            android:paddingBottom="15dp"
            android:textSize="24sp"
            android:textStyle="bold"
            android:textAlignment="center"
            android:text="hola"
            />

        <Button
            android:id="@+id/btn_option_consult"
            style="@style/UpnBank.OptionsButtons"
            android:drawableStart="@drawable/ic_consulting"
            android:text="@string/str_form_btn_consult"/>
        <Button
            android:id="@+id/btn_option_transference"
            style="@style/UpnBank.OptionsButtons"
            android:drawableStart="@drawable/ic_transference"
            android:text="@string/str_form_btn_transference"/>
        <Button
            android:id="@+id/btn_option_attention_points"
            style="@style/UpnBank.OptionsButtons"
            android:drawableStart="@drawable/ic_attention_point"
            android:text="@string/str_form_btn_attention_points"/>
        <Button
            android:id="@+id/btn_option_service_payment"
            style="@style/UpnBank.OptionsButtons"
            android:drawableStart="@drawable/ic_service"
            android:text="@string/str_form_btn_service_payment"/>
        <Button
            android:visibility="gone"
            android:id="@+id/btn_contact_us"
            style="@style/UpnBank.OptionsButtons"
            android:text="@string/str_form_btn_contact_us"/>

    </LinearLayout>

</RelativeLayout>