<?xml version="1.0" encoding="utf-8"?>
<android.support.design.widget.CoordinatorLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fitsSystemWindows="true">

    <android.support.design.widget.AppBarLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:theme="@style/AppTheme.AppBarOverlay">

        <android.support.v7.widget.Toolbar
            android:id="@+id/toolbar"
            android:layout_width="match_parent"
            android:layout_height="?attr/actionBarSize"
            android:background="?attr/colorPrimary"
            app:popupTheme="@style/AppTheme.PopupOverlay"/>

    </android.support.design.widget.AppBarLayout>

    <LinearLayout
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:orientation="vertical"
    app:layout_behavior="@string/appbar_scrolling_view_behavior"
    >

        <!--subtítulo instrucción-->
        <TextView
            style="@style/UpnBank.Subtitle.FullWidth"
            android:text="@string/str_select_attention_point_type"
            />

        <!--botones para seleccionar el tipo de punto de atención-->
        <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="10dp"
                android:gravity="center_horizontal"
                android:orientation="horizontal">

                <ToggleButton
                    android:id="@+id/btn_cajero"
                    style="@style/UpnBank.ToggleButton"
                    android:text="@string/str_btn_cashier"
                    android:textOff="@string/str_btn_cashier"
                    android:textOn="@string/str_btn_cashier"/>

                <ToggleButton
                    android:id="@+id/btn_agente"
                    style="@style/UpnBank.ToggleButton"
                    android:text="@string/str_btn_agent"
                    android:textOff="@string/str_btn_agent"
                    android:textOn="@string/str_btn_agent"/>

                <ToggleButton
                    android:id="@+id/btn_banco"
                    style="@style/UpnBank.ToggleButton"
                    android:text="@string/str_btn_bank"
                    android:textOff="@string/str_btn_bank"
                    android:textOn="@string/str_btn_bank"
                    />
            </LinearLayout>

        <!--fragmento donde estará nuestro mapa-->
        <fragment android:id="@+id/map"
                  android:name="com.google.android.gms.maps.SupportMapFragment"
                  android:layout_width="match_parent"
                  android:layout_height="match_parent"/>
    </LinearLayout>
</android.support.design.widget.CoordinatorLayout>