<?xml version="1.0" encoding="utf-8"?>
<ScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    app:layout_behavior="@string/appbar_scrolling_view_behavior"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Activities.LoginActivity"
    tools:showIn="@layout/activity_login">
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingBottom="@dimen/activity_vertical_margin"
        android:paddingLeft="@dimen/activity_horizontal_margin"
        android:paddingRight="@dimen/activity_horizontal_margin"
        android:paddingTop="@dimen/activity_vertical_margin"
        android:orientation="vertical"
        >

        <!--fieldset superior-->
        <FrameLayout
            android:background="@drawable/card_background"
            android:layout_width="match_parent"
            android:layout_height="250dp"
            >

            <TextView
                android:layout_height="wrap_content"
                android:layout_width="wrap_content"
                android:layout_marginTop="20dp"
                android:layout_marginStart="20dp"
                android:textStyle="italic"
                android:textColor="@android:color/white"
                android:textSize="25sp"
                android:text="@string/str_card_title"
                />

            <LinearLayout
                android:layout_height="wrap_content"
                android:layout_width="match_parent"
                android:layout_gravity="center_vertical"
                android:gravity="center_horizontal"
                android:orientation="horizontal"
                android:weightSum="1">

                <EditText
                    android:id="@+id/card_field_1"
                    android:text="1443"
                    style="@style/UpnBank.CreditCardEditBox"/>
                <EditText
                    android:id="@+id/card_field_2"
                    android:text="3440"
                    style="@style/UpnBank.CreditCardEditBox"/>
                <EditText
                    android:id="@+id/card_field_3"
                    android:text="0389"
                    style="@style/UpnBank.CreditCardEditBox"/>
                <EditText
                    android:id="@+id/card_field_4"
                    android:text="5594"
                    style="@style/UpnBank.CreditCardEditBox"/>
            </LinearLayout>
        </FrameLayout>


        <!--fieldset inferior-->
        <LinearLayout
            android:background="@drawable/fieldset_border_top_background"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:orientation="vertical">
            <!--material input inferior-->
            <android.support.design.widget.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:layout_marginTop="10dp"
                android:hint="Ingrese DNI">
                <EditText
                    android:id="@+id/edt_dni"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:text="76935184"
                    android:inputType="number"
                    />
            </android.support.design.widget.TextInputLayout>

            <android.support.design.widget.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:layout_marginTop="10dp"
                android:hint="@string/str_form_password">
                <EditText
                    android:id="@+id/edt_password"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:text="5211940"
                    android:inputType="textPassword"
                    />
            </android.support.design.widget.TextInputLayout>

            <!--boton ingresar-->
            <Button
                style="@style/Widget.AppCompat.Button.Colored"
                android:id="@+id/btn_login"
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:layout_gravity="end"
                android:paddingStart="10dp"
                android:paddingEnd="10dp"
                android:textAllCaps="false"
                android:text="@string/str_form_btn_login"/>
        </LinearLayout>

    </LinearLayout>
</ScrollView>